WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129120
WKPage's setBackgroundExtendsBeyondPage API should be exposed through WKView and WKWebView
https://bugs.webkit.org/show_bug.cgi?id=129120
Summary
WKPage's setBackgroundExtendsBeyondPage API should be exposed through WKView ...
Beth Dakin
Reported
2014-02-20 14:16:50 PST
WKPage's setBackgroundExtendsBeyondPage API should be exposed through WKView and WKWebView.
Attachments
Patch
(3.70 KB, patch)
2014-02-20 14:22 PST
,
Beth Dakin
no flags
Details
Formatted Diff
Diff
Patch
(5.00 KB, patch)
2014-02-20 14:59 PST
,
Beth Dakin
andersca
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2014-02-20 14:22:29 PST
Created
attachment 224798
[details]
Patch
Beth Dakin
Comment 2
2014-02-20 14:59:42 PST
Created
attachment 224799
[details]
Patch
WebKit Commit Bot
Comment 3
2014-02-20 15:00:26 PST
Attachment 224799
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/API/Cocoa/WKViewPrivate.h:50: Missing spaces around = [whitespace/operators] [4] ERROR: Source/WebKit2/UIProcess/API/Cocoa/WKWebViewPrivate.h:72: Missing spaces around = [whitespace/operators] [4] Total errors found: 2 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Beth Dakin
Comment 4
2014-02-20 15:07:29 PST
http://trac.webkit.org/changeset/164453
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug